src/objects/EventDateTime__c.object
<CustomObject>
    <description>The specific date(s) and time(s) on which the event is scheduled</description>
    <fields>
        <fullName>AnnounceDate__c</fullName>
        <label>Announce Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AnnounceTime__c</fullName>
        <label>Announce Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Artists__c</fullName>
        <label>Artist(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurfewTime__c</fullName>
        <label>Curfew Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Drives sharing rules to provide read-only access to other division members</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoorTime__c</fullName>
        <label>Door Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventDate__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventEndDate__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventName__c</fullName>
        <label>Event Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventStatus__c</fullName>
        <label>Event Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending Unlikely</fullName>
                </value>
                <value>
                    <fullName>Pending Likely</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Flash Complete</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventType__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promoted Show</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Buy Sell</fullName>
                </value>
                <value>
                    <fullName>Gospel Brunch</fullName>
                </value>
                <value>
                    <fullName>Festival</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Booked/Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventYear__c</fullName>
        <label>Event Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event Date Times</relationshipLabel>
        <relationshipName>EventDateTimes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HidePreviouslyForecastedLiftBfrTxs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Previously Forecasted Lift Bfr Txs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePreviouslyForecastedProjPdTkt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Previously Forecasted Proj Pd Tkt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEventMultiScale__c</fullName>
        <formula>Event__r.UsingMultiScale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Event Multi-Scale?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LotTime__c</fullName>
        <label>Lot Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Used to store the external system notes such as Caterease Venue Names</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OfficeName__c</fullName>
        <description>Drives sharing rules to provide edit access to other office members</description>
        <label>Office Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrevForecastedPlatinumLiftbeforeFee__c</fullName>
        <label>Prev Forecasted Platinum Lift before Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviouslyForecastedGrossSales__c</fullName>
        <label>Previously Forecasted Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviouslyForecastedLiftBeforeTaxes__c</fullName>
        <label>Previously Forecasted Lift Before Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviouslyForecastedProjPaidTickets__c</fullName>
        <label>Previously Forecasted Proj Paid Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviouslyProjectedGrossSales__c</fullName>
        <label>Previously Projected Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryHeadlinerArtist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Headliner Artist</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Artist does not exist or does not match search entry.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Artist</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Date Times (Primary Headliner Artist)</relationshipLabel>
        <relationshipName>PrimaryHeadlinerEventDateTimes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryVenueOffice__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office</description>
        <label>Primary Venue Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicOnSale__c</fullName>
        <label>Public On Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PublicVisibilityviaPublicOnSale__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Drives sharing rules to provide read-only access to all internal users</description>
        <label>Public Visibility via Public On Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StartTimeSortable__c</fullName>
        <formula>IF( CONTAINS(StartTime__c, &quot;AM&quot;) , &quot;1&quot;  &amp; StartTime__c, &quot;2&quot; &amp; StartTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time Sortable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StatusCancelPostpone__c</fullName>
        <formula>CASE(TEXT(Event__r.Status__c),
  &quot;Cancelled&quot;, 1,
  &quot;Postponed&quot;, 1,
  0
) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Cancel-Postpone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusPostConfirm__c</fullName>
        <formula>CASE(TEXT(Event__r.Status__c),
  &quot;Confirmed&quot;, 1,
  &quot;Flash Started&quot;, 1,
  &quot;Flash Complete&quot;, 1,
  0
) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Post-Confirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusPreConfirm__c</fullName>
        <formula>CASE(TEXT(Event__r.Status__c),
  &quot;Draft&quot;, 1,
  &quot;Pending Likely&quot;, 1,
  &quot;Pending Unlikely&quot;, 1,
  0
) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Pre-Confirm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EventType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Club Night</fullName>
                </value>
                <value>
                    <fullName>Filler Show</fullName>
                </value>
                <value>
                    <fullName>Internal Rental</fullName>
                </value>
                <value>
                    <fullName>Promoted</fullName>
                </value>
                <value>
                    <fullName>Radio Show</fullName>
                </value>
                <value>
                    <fullName>Rental/Special Events/Venue Holds</fullName>
                </value>
                <value>
                    <fullName>Restaurant Show</fullName>
                </value>
                <value>
                    <fullName>Special Event</fullName>
                </value>
                <value>
                    <fullName>Tentpole</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Major Local Event</fullName>
                </value>
                <value>
                    <fullName>Competitive Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UsingTicketFeed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Using Ticket Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VenueHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Venue Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VenueName__c</fullName>
        <formula>Venue__r.Name</formula>
        <label>Venue Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VenueOwnership__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office when Owned/Operated</description>
        <label>Venue Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Venue does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Venue</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Event Date Times</relationshipLabel>
        <relationshipName>EventDateTimes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WaveVenue__c</fullName>
        <description>Wave related field to reduce relationships in Boomi ETL (reduce the SOQL to less than 20000 chars)</description>
        <formula>Venue__r.Name</formula>
        <inlineHelpText>Wave related field to reduce relationships in Boomi ETL (reduce the SOQL to less than 20000 chars)</inlineHelpText>
        <label>WaveVenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fxPrevForecastedPlatinumLiftbeforeFee__c</fullName>
        <formula>(PrevForecastedPlatinumLiftbeforeFee__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Prev Fore. Plat. Lift before Fee (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPreviouslyForecastedGrossSales__c</fullName>
        <formula>(PreviouslyForecastedGrossSales__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Previously Forecasted Gross Sales (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPreviouslyForecastedLiftBeforeTaxes__c</fullName>
        <formula>(PreviouslyForecastedLiftBeforeTaxes__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Prev Forecasted Lift Before Taxes (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPreviouslyForecastedProjPaidTickets__c</fullName>
        <formula>(PreviouslyForecastedProjPaidTickets__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Prev Forecasted Proj Paid Tickets (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPreviouslyProjectedGrossSales__c</fullName>
        <formula>(PreviouslyProjectedGrossSales__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Previously Projected Gross Sales (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Event Date Time</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EDT-{000000}</displayFormat>
        <label>Event Date Time ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Date Times</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LNE_EventChildOffice</fullName>
        <active>true</active>
        <description>Checks to see if the user has access to the events office/division. If not, user can not create child records related to the event.</description>
        <errorConditionFormula>!CONTAINS( &apos;,&apos; + $User.OfficeAccess__c + &apos;,&apos;,
&apos;,&apos; + Event__r.Office__r.OfficeID__c + &apos;,&apos;)
&amp;&amp; !$Setup.GeneralSettings__c.GlobalDataAdministrator__c
&amp;&amp; !$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;

/* Financial Calculator is running and making updates */
!$Setup.GeneralSettings__c.BypassPBFlow__c</errorConditionFormula>
        <errorMessage>You cannot create child records of the event because you do not have authorized access to the events office/division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_EventDateYear</fullName>
        <active>false</active>
        <description>DISABLED: Legacy data prevents this from being enforced on the backend. It likely remains a front-end validation in VF on event creation.

Event Date (if year specified) or Event Year can&apos;t be set for more than 5 years from todays year</description>
        <errorConditionFormula>AND(
!$Setup.GeneralSettings__c.BypassAutomation__c,
YEAR(EventDate__c) - YEAR(TODAY()) &gt; 5)
||

AND(!$Setup.GeneralSettings__c.BypassAutomation__c,
VALUE(EventYear__c) - YEAR(TODAY()) &gt; 5)</errorConditionFormula>
        <errorMessage>Event Date or Event Year can&apos;t be more than 5 years from the current year.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_EventDateYearBlank</fullName>
        <active>true</active>
        <description>Event Date or Event Year must be selected.</description>
        <errorConditionFormula>AND(ISBLANK(EventDate__c) = TRUE,
ISBLANK(EventYear__c) = TRUE,
!$Setup.GeneralSettings__c.BypassAutomation__c)</errorConditionFormula>
        <errorMessage>Event Date or Event Year must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_EventYearNumberFormat</fullName>
        <active>true</active>
        <description>Event Year must be a number.</description>
        <errorConditionFormula>!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
EventYear__c &lt;&gt; NULL &amp;&amp;
NOT(ISNUMBER(  EventYear__c ))</errorConditionFormula>
        <errorDisplayField>EventYear__c</errorDisplayField>
        <errorMessage>Event Year must be a number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_ShowStartTime</fullName>
        <active>true</active>
        <description>Show start time is required if event status is &quot;Confirmed&quot;</description>
        <errorConditionFormula>ISNEW() &amp;&amp;
ISPICKVAL(Event__r.Status__c, &quot;Confirmed&quot;) &amp;&amp;
ISBLANK(StartTime__c) &amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c</errorConditionFormula>
        <errorDisplayField>StartTime__c</errorDisplayField>
        <errorMessage>Start time is required if event status is confirmed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_TimeFormat</fullName>
        <active>true</active>
        <description>All time fields must be in this format: HH:MM AM|PM</description>
        <errorConditionFormula>NOT(REGEX( CurfewTime__c , &quot;[0-1]?[0-9]:[0-5][0-9] [A|P]M&quot;))
&amp;&amp;!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
CurfewTime__c &lt;&gt; NULL
||

NOT(REGEX( DoorTime__c , &quot;[0-1]?[0-9]:[0-5][0-9] [A|P]M&quot;))
&amp;&amp;!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
DoorTime__c &lt;&gt; NULL
||

NOT(REGEX( LotTime__c , &quot;[0-1]?[0-9]:[0-5][0-9] [A|P]M&quot;))
&amp;&amp;!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
LotTime__c &lt;&gt; NULL
||

NOT(REGEX( StartTime__c , &quot;[0-1]?[0-9]:[0-5][0-9] [A|P]M&quot;))
&amp;&amp;!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
StartTime__c &lt;&gt; NULL
||

NOT(REGEX( AnnounceTime__c , &quot;[0-1]?[0-9]:[0-5][0-9] [A|P]M&quot;))
&amp;&amp;!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp; AnnounceTime__c &lt;&gt; NULL</errorConditionFormula>
        <errorMessage>All time fields must be in HH:MM AM|PM format</errorMessage>
    </validationRules>
</CustomObject>